Day 3 - Global Store + API Data Rendering

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,7 +7,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["client/src/*"]
     }
-  }
+  },
+   "include": ["client", "server", "types"]
 }
