--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-router": "^1.125.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
