--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,13 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-router": "^1.125.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sonner": "^2.0.6",
+    "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
@@ -32,6 +37,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.5",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.36.0",
     "vite": "^7.0.3"
