--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,6 @@
 [pytest]
+#addopts = -n auto --cov=backend/src --cov-report=term-missing
 addopts = -n auto
+testpaths = backend/tests
+python_files = test_*.py
 pythonpath = backend
