--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,4 +56,10 @@ jobs:
 
       - name: Run Vitest
         working-directory: client
-        run: npm test
+        run: npm run test:coverage
+        
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+                flags: frontend
+                files: ./client/coverage/lcov.info
