--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,9 +50,11 @@ jobs:
         with:
           node-version: "18"
 
-      - name: Install dependencies
+      - name: Clean install dependencies
         working-directory: client
-        run: npm install
+        run: |
+            rm -rf node_modules package-lock.json
+            npm ci
 
       - name: Run Vitest
         working-directory: client
