--- a/client/package.json
+++ b/client/package.json
@@ -49,8 +49,10 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.36.0",
     "vite": "^7.0.3",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "rollup": "^4.15.0"
   },
+
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
   "keywords": [],
