Day13 :  Test GitHub CI + Codecov

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Clean install dependencies
         working-directory: client
         run: |
-            rm -rf node_modules package-lock.json
+            rm -rf node_modules
             npm ci
 
       - name: Run Vitest
