--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         # No working-directory needed here either, as we want to run
         # the command from the root to make 'backend/src' relative to it.
         run: |
-          pytest --cov=backend/src --cov-report=xml --cov-report=term-missing
+          PYTHONPATH=backend/src pytest --cov=backend/src --cov-report=xml --cov-report=term-missing
         
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
