Day13 :  Test GitHub CI + Codecov

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,11 +24,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
+        
+      - name: Set up backend test environment
+        run: |
+         echo "database_url=sqlite:///./test.db" >> backend/.env
+         echo "secret_key=test_secret" >> backend/.env
+    #   - name: Copy test env file
+    #     run: cp backend/.env.test backend/.env
+      
       - name: Run pytest with coverage
-        env:
-         DATABASE_URL: ${{ secrets.DATABASE_URL }} # Use GitHub Secrets
-         SECRET_KEY: ${{ secrets.SECRET_KEY }}     # Use GitHub Secrets
+        # env:
+        #  DATABASE_URL: ${{ secrets.DATABASE_URL }} # Use GitHub Secrets
+        #  SECRET_KEY: ${{ secrets.SECRET_KEY }}     # Use GitHub Secrets
         # No working-directory needed here either, as we want to run
         # the command from the root to make 'backend/src' relative to it.
         run: |
