--- a/backend/.env.test
+++ b/backend/.env.test
@@ -3,7 +3,7 @@ APP_TITLE="SkillMate API"
 APP_DESCRIPTION="API for SkillMate application"
 APP_VERSION="0.1.0"
 
-DATABASE_URL=sqlite:///backend/test.db
+DATABASE_URL=sqlite:///:memory:
 
 SECRET_KEY=secretkeychangeit
 ALGORITHM=HS256
