--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,8 +63,7 @@ jobs:
       - name: Clean install dependencies
         working-directory: client
         run: |
-            rm -rf node_modules
-            npm ci
+            npm ci || (rm -rf node_modules && npm install)
 
       - name: Run Vitest
         working-directory: client
