Day 14 - SkillMate Backend - Docker &  PostgreSQL Setup

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,8 @@ APP_TITLE="SkillMate API"
 APP_DESCRIPTION="API for SkillMate application"
 APP_VERSION="0.1.0"
 
-DATABASE_URL=
+#DATABASE_URL=sqlite:///backend/skillmate.db
+DATABASE_URL=postgresql://<user>:<password>@<host>:<port>/<database>
 
 SECRET_KEY=
 ALGORITHM=
