Day 15 — Client build tested for production, docker setup compeleted for client, service added

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,8 +7,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["client/src/*"]
-    }
+      "@/*": ["src/*"]
+    },
+    "types": ["vitest/globals", "vite/client"]
   },
-   "include": ["client", "server", "types"]
+  // "include": ["client", "server", "types"]
 }
