--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -15,6 +15,13 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+     /* Path Aliases */
+    "baseUrl": ".", // This needs to be set
+    "paths": {
+      "@/*": ["./src/*"] // This maps '@/anything' to './src/anything'
+    },
+
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
