--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       ports:
             - "5432:5432" 
     backend:
+
       build: 
         context: .
         dockerfile: Dockerfile
@@ -28,5 +29,14 @@ services:
       # environment: 
       #   DATABASE_URL: postgresql+psycopg2://skillmate:supersecret@db:5432/skillmate_db
       restart: unless-stopped
+    frontend:
+      build:
+        context: .
+        dockerfile: client/Dockerfile
+      container_name: skillmate-frontend
+      ports:
+        - "3000:80"
+      depends_on:
+        - backend
 volumes:
   postgres_data:  
