--- a/backend/.env.test
+++ b/backend/.env.test
@@ -3,7 +3,8 @@ APP_TITLE="SkillMate API"
 APP_DESCRIPTION="API for SkillMate application"
 APP_VERSION="0.1.0"
 
-DATABASE_URL=sqlite:///:memory:
+# DATABASE_URL=sqlite:///:memory:
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/test_db
 
 SECRET_KEY=secretkeychangeit
 ALGORITHM=HS256
