--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,20 +10,21 @@ jobs:
   backend:
     name: 🐍 Backend Tests
     runs-on: ubuntu-latest
-  service:
-      postgre:
-          image: postgres:15
-      env:
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: postgres
-        POSTGRES_DB: test_db
-      ports:
-        - 5432:5432
-      options: >-
-        --health-cmd="pg_isready"
-        --health-interval=10s
-        --health-timeout=5s
-        --health-retries=5
+
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: test_db
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
       - uses: actions/checkout@v3
@@ -42,29 +43,26 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: Install dependencies
-        # requirements.txt is at the root, so no `working-directory` needed here.
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
         
       - name: Set up backend test environment
         run: |
-         echo "database_url=postgresql://postgres:postgres@localhost:5432/test_db" >> backend/.env
-         echo "secret_key=test_secret" >> backend/.env
+          echo "database_url=postgresql://postgres:postgres@localhost:5432/test_db" >> backend/.env
+          echo "secret_key=test_secret" >> backend/.env
                
       - name: Run pytest with coverage
-        # No working-directory needed here either, as we want to run
-        # the command from the root to make 'backend/src' relative to it.
         run: |
           PYTHONPATH=backend/src pytest --cov=backend/src --cov-report=xml --cov-report=term-missing
         
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
-         token: ${{ secrets.CODECOV_TOKEN }}
-         files: ./coverage.xml
-         flags: backend
-         name: backend-tests
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.xml
+          flags: backend
+          name: backend-tests
 
   frontend:
     name: ⚛️ Frontend Tests
@@ -77,7 +75,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "18"
-     
+
       - name: Cache node modules
         uses: actions/cache@v4
         with:
@@ -89,7 +87,7 @@ jobs:
       - name: Clean install dependencies
         working-directory: client
         run: |
-            npm ci || (rm -rf node_modules && npm install)
+          npm ci || (rm -rf node_modules && npm install)
 
       - name: Run Vitest
         working-directory: client
@@ -98,5 +96,5 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
-                flags: frontend
-                files: ./client/coverage/lcov.info
+          flags: frontend
+          files: ./client/coverage/lcov.info
