--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,11 @@ name: CI
 on:
   push:
     branches: [main]
+    paths-ignore: ['docs/**','README.md','.gitignore','.vscode/**','LICENCE']
   pull_request:
     branches: [main]
-
+    paths-ignore: ['docs/**','README.md','.gitignore','.vscode/**','LICENCE']
+    
 jobs:
   backend:
     name: 🐍 Backend Tests
