Dat 16 - CI FILE UPDATED TO EXCULED THE FILES

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,16 @@ name: CI
 on:
   push:
     branches: [main]
-    paths-ignore: ['docs/**','README.md','.gitignore','.vscode/**','LICENCE']
+    paths-ignore: 
+      - 'README.md'
+      - '.gitignore'
+      - 'LICENCE'
   pull_request:
     branches: [main]
-    paths-ignore: ['docs/**','README.md','.gitignore','.vscode/**','LICENCE']
-    
+    paths-ignore: 
+      - 'README.md'
+      - '.gitignore'
+      - 'LICENCE'
 jobs:
   backend:
     name: 🐍 Backend Tests
