Dat 16 - Pre commit passed all checks implimented

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -7,7 +7,6 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
@@ -15,14 +14,11 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
-     /* Path Aliases */
-    "baseUrl": ".", // This needs to be set
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"] // This maps '@/anything' to './src/anything'
+      "@/*": ["./src/*"]
     },
 
-
-    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
