--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,13 +3,13 @@ name: CI
 on:
   push:
     branches: [main]
-    paths-ignore: 
+    paths-ignore:
       - 'README.md'
       - '.gitignore'
       - 'LICENCE'
   pull_request:
     branches: [main]
-    paths-ignore: 
+    paths-ignore:
       - 'README.md'
       - '.gitignore'
       - 'LICENCE'
@@ -53,16 +53,16 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-        
+
       - name: Set up backend test environment
         run: |
           echo "database_url=postgresql://postgres:postgres@localhost:5432/test_db" >> backend/.env
           echo "secret_key=test_secret" >> backend/.env
-               
+
       - name: Run pytest with coverage
         run: |
           PYTHONPATH=backend/src pytest --cov=backend/src --cov-report=xml --cov-report=term-missing
-        
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
@@ -70,6 +70,14 @@ jobs:
           files: ./coverage.xml
           flags: backend
           name: backend-tests
+
+      - name : Install pre-commit
+        run: |
+          pip install pre-commit
+          pre-commit install
+
+      - name: Run pre-commit on all files
+        run: pre-commit run --all-files
 
   frontend:
     name: ⚛️ Frontend Tests
@@ -99,7 +107,7 @@ jobs:
       - name: Run Vitest
         working-directory: client
         run: npm run test:coverage
-        
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
