Day 16 - Redis Added in backend for caching

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,8 @@ APP_VERSION="0.1.0"
 #DATABASE_URL=sqlite:///backend/skillmate.db
 DATABASE_URL=postgresql://<user>:<password>@<host>:<port>/<database>
 
+REDIS_URL=redis://redis:6379
+
 SECRET_KEY=
 ALGORITHM=
 ACCESS_TOKEN_EXPIRE_MINUTES=
