--- a/backend/.env.test
+++ b/backend/.env.test
@@ -6,6 +6,8 @@ APP_VERSION="0.1.0"
 # DATABASE_URL=sqlite:///:memory:
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/test_db
 
+REDIS_URL=redis://redis:6379
+
 SECRET_KEY=secretkeychangeit
 ALGORITHM=HS256
 TOKEN_EXPIRES_IN=60
