--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,11 @@ services:
             - postgres_data:/var/lib/postgresql/data
       ports:
             - "5432:5432"
+    redis:
+      image: redis:7
+      ports:
+            - "6379:6379"
+      restart: unless-stopped
     backend:
 
       build:
