Day 16 -  docker issue fixed and tested containters are running now

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,7 +50,9 @@ repos:
     rev: v5.0.0
     hooks:
       - id: trailing-whitespace
+        exclude: ^requirements\.txt$
       - id: end-of-file-fixer
+        exclude: ^requirements\.txt$
       - id: check-yaml
       - id: check-json
 
