--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,8 @@ dependencies = [
     "python-dotenv~=1.1.0",      # For environment variables
     "pydantic-settings~=2.10.1",
     "pre-commit~=4.2.0",
-    "redis~=6.2.0",
-    "fastapi-cache2~=0.2.2"
+    # "redis~=6.2.0",
+    # "fastapi-cache2~=0.2.2"
 ]
 
 [tool.setuptools]
