--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install poetry
+          poetry config virtualenvs.create false
+          poetry install --no-root
 
       - name: Set up backend test environment
         run: |
@@ -80,8 +82,19 @@ jobs:
           pip install pre-commit
           pre-commit install
 
+      - name: Debug print DB URL
+        working-directory: backend
+        run: |
+          echo "Loaded DB URL: $DATABASE_URL"
+          cat .env
+
+      - name: Run DB migrations
+        run: alembic upgrade head
+
       - name: Run pre-commit on all files
         run: pre-commit run --all-files
+
+
 
   frontend:
     name: ⚛️ Frontend Tests
