--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
     "pre-commit~=4.2.0",
     # "redis~=6.2.0",
     # "fastapi-cache2~=0.2.2"
-    "alembic (>=1.16.4,<2.0.0)"
+    "alembic~=1.16.4"
 ]
 
 [tool.setuptools]
