Day 17 - PostgreSql is added with testes moved from memory to realtime db

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,10 @@
 [pytest]
 #addopts = -n auto --cov=backend/src --cov-report=term-missing
-addopts = -n auto
+#addopts = --maxfail=1 --disable-warnings
+#addopts = -s
+#addopts = -n auto
 testpaths = backend/tests
 python_files = test_*.py
 pythonpath = backend
+log_cli = true
+log_cli_level = INFO
