--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,3 +111,4 @@ pytest-cov = "6.2.1"
 #select = ["E", "F", "W", "I", "UP", "B", "C4"] # Expanded common rules
 #ignore = ["E501"]
 #target-version = "py39"
+sqlalchemy-utils = "^0.41.2"
