--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,8 @@ dependencies = [
     # "redis~=6.2.0",
     # "fastapi-cache2~=0.2.2"
     "alembic~=1.16.4",
-    "aiofiles (>=24.1.0,<25.0.0)"
+    "aiofiles (>=24.1.0,<25.0.0)",
+    "python-multipart (>=0.0.20,<0.0.21)"
 ]
 
 [tool.setuptools]
