--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,8 @@ dependencies = [
     # "fastapi-cache2~=0.2.2"
     "alembic~=1.16.4",
     "aiofiles (>=24.1.0,<25.0.0)",
-    "python-multipart (>=0.0.20,<0.0.21)"
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "pytest-asyncio (>=1.1.0,<2.0.0)"
 ]
 
 [tool.setuptools]
