Day 20 - Helper Function to Create Full url for public resources is done. env files updated with app_url varibale lists updated

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 APP_TITLE="SkillMate API"
 APP_DESCRIPTION="API for SkillMate application"
 APP_VERSION="0.1.0"
+APP_URL=http://localhost:8000
 
 #DATABASE_URL=sqlite:///backend/skillmate.db
 DATABASE_URL=postgresql://<user>:<password>@<host>:<port>/<database>
