--- a/backend/.env.test
+++ b/backend/.env.test
@@ -2,6 +2,7 @@
 APP_TITLE="SkillMate API"
 APP_DESCRIPTION="API for SkillMate application"
 APP_VERSION="0.1.0"
+APP_URL=http://localhost:8000
 
 # DATABASE_URL=sqlite:///:memory:
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/test_db
