--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,8 @@ dependencies = [
     "alembic~=1.16.4",
     "aiofiles (>=24.1.0,<25.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
-    "pytest-asyncio (>=1.1.0,<2.0.0)"
+    "pytest-asyncio (>=1.1.0,<2.0.0)",
+    "pytest-mock (>=3.14.1,<4.0.0)"
 ]
 
 [tool.setuptools]
